<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddAfeccions">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/tipo_af"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/et_afeccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textCapSentences" />

    <ListView
        android:id="@+id/lv_afeccions"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cientonoventa" />

    <LinearLayout
        android:id="@+id/linear_botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/veinte"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/cinco">

            <Button
                android:id="@+id/btn_engadir_afeccion_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:backgroundTint="@color/red"
                android:text="@string/add" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/cinco">

            <Button
                android:id="@+id/btn_cancelar_afeccions_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:backgroundTint="@color/red"
                android:text="@string/ok" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>